fix: Server area content spacing

--- a/src/renderer/components/areas/ServerArea.scss
+++ b/src/renderer/components/areas/ServerArea.scss
@@ -4,7 +4,6 @@
   width: 100%;
   padding: 4px;
   flex: 1 0 auto;
-  justify-content: space-around;
 
   &-fetch {
     display: flex;
